# fastapi_skeleton

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ExampleApp/apis/: auth.py  users.py
ExampleApp/dependencies/: db.py
ExampleApp/exceptions/: error_code.py
ExampleApp/middlewares/: auth_middleware.py  metrics_middleware.py
ExampleApp/models/: __init__.py  base.py  users.py
ExampleApp/orms/: __init__.py  base.py  nosql_orm.py  relational_orm.py
ExampleApp/routers/: __init__.py  auth.py  server.py  users.py
ExampleApp/schemas/: auth.py  base.py  server.py  users.py
ExampleApp/services/: auth.py
ExampleApp/views/: __init__.py  auth.py  server.py  users.py
common/: logger.py
conf/: .env  .env_prod  default.py
databases/: __init__.py
databases/mysql_impl/: __init__.py
databases/postgres_impl/: __init__.py
utils/: meta_utils.py  time_utils.py
